# gerenciador-gastos

./: CHANGELOG.md  README.md  gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py  cotacao.py  gastos.py
tests/: test_gastos.py
