[project]
name = "gerenciador-gastos"
version = "1.0.0"
description = "Aplicação CLI para controle de gastos pessoais"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Seu Nome Aqui" }]

[project.scripts]
gerenciador-gastos = "src.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
